# OS-Cortes-Florido

./: CMakeLists.txt  README.md  csorth.c  csorth.h  csortp.c  csortp.h  csortpexec.c  main.c
OS-Proyecto1/: README.md  csortp.c  csortpexec.c  csortpexec.h
OS-Proyecto1/TestFiles/: log1000A  log10KA  log20K
OS-Proyecto2/: CMakeLists.txt  Client.c  Client.h  Request.h  Response.h  Server.c  Server.h  Tweet.h
TestFiles/: log1000B  log10KB  log20KA  prueba11000.txt  prueba3500.txt
src/: Server.h  Tweet.h  relations.txt
